fix(frontend): 🐛 adjust button alignment (button + icon)

--- a/packages/dev-frontend/src/styles/buttons.module.css
+++ b/packages/dev-frontend/src/styles/buttons.module.css
@@ -17,6 +17,9 @@
   padding-inline: 2rem;
   padding-block: 0.5rem;
   font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .normal:hover,
 .normal:focus-visible {
